# gitignorant

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  gitignorant.py  pyproject.toml  setup.cfg  test_gitignorant.py
.github/workflows/: ci.yml
gitignorant/: __init__.py
