[flake8]
max-line-length = 88
extend-ignore = E203

[metadata]
name = gitignorant
version = 0.1.2
author = Aarni Koskela
author_email = aarni@valohai.com
description = A parser for gitignore files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/valohai/gitignorant
project_urls =
    Bug Tracker = https://github.com/valohai/gitignorant/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = gitignorant
include_package_data = True
python_requires = >=3.6
